fix horizontal scroll issue

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,6 +9,7 @@ body {
 	font-family: 'Poppins', sans-serif;
 	scroll-behavior: smooth;
 	font-weight: 300;
+	overflow-x: hidden;
 }
 
 * {
