--- a/styles/partials/_contactpage.scss
+++ b/styles/partials/_contactpage.scss
@@ -95,7 +95,7 @@
 
 @media (min-width: $breakpoint-tablet-lrg) {
 	#contact .contact-container {
-		margin-right: 30vw;
+		margin-right: 50vw;
 
 		.contact-form .btn {
 			width: 200px;
